[package]
name = "axp173"
description = "Device-agnostic X-Powers AXP173 power management IC driver"
version = "0.1.7"
authors = ["eupn <eupn@protonmail.com>"]
edition = "2018"
repository = "https://github.com/eupn/axp173"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "axp173",
]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
byteorder = { version = "1", default-features = false }
bitflags = "1"
bit_field = "0.10"

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]
